@@ -1,3 +1,13 @@
+Mon Jan 18 12:19:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO/be/be_attribute.cpp:
+        * TAO/be_include/be_attribute.h:
+          Added original_attribute member
+
+        * TAO/be/be_operation.cpp:
+        * TAO/be_include/be_operation.h:
+          Added original_operation attribute member
+
 Mon Jan 18 10:00:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/IDL_Test.mpc:
